--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "TencentYoutuyun/php-sdk",
+    "name": "tencentyoutuyun/php-sdk",
     "keywords": ["TencentYoutuyun", "qcloud", "sdk"],
     "homepage": "http://open.youtu.qq.com/",
     "license": "MIT",
